--- a/code/datathon.ipynb
+++ b/code/datathon.ipynb
@@ -6,7 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I. Read Data"
    ]
   },
   {
@@ -492,13 +500,20 @@
     }
    ],
    "source": [
-    "# Variable names listed in the data dictionary\n",
+    "# Variables listed in the data dictionary\n",
     "var = list(pd.read_excel(\"../data/data-dictionary.xlsx\", \n",
     "                         sheet_name=\"Codebook\")[\"Column Name\"]) + \\\n",
     "      list(pd.read_excel(\"../data/data-dictionary.xlsx\", \n",
     "                         sheet_name=\"AA Locations\", \n",
     "                         header=None)[0].dropna())\n",
     "len(var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Discrepancy Between Data and its Dictionary"
    ]
   },
   {
@@ -585,6 +600,13 @@
    "source": [
     "# Number of variables present in dictionary, but NOT present in train (A-B)\n",
     "len(set(var) - set(train.columns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Handle Missing Data"
    ]
   },
   {
@@ -904,11 +926,341 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# II. Run Classification Models\n",
+    "\n",
+    "## 1. Random Forests\n",
+    "\n",
+    "Sklearn requires strings in Random Forests to be converted to floats. One such way to do it is to use the pd.factorize() function.\n",
+    "\n",
+    "### Handle Strings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'LN2_RIndLngBEOth', u'LN2_WIndLngBEOth'], dtype='object')\n",
+      "Index([u'LN2_RIndLngBEOth', u'LN2_WIndLngBEOth'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variables that contain strings\n",
+    "print train.columns[train.dtypes==object]\n",
+    "print test.columns[test.dtypes==object]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hindi                        5198\n",
+       "Marathi                      1023\n",
+       "Tamil                         941\n",
+       "Telugu                        914\n",
+       "Bengali                       891\n",
+       "Oriya                         478\n",
+       "Gujarati                      410\n",
+       "Kannada                       399\n",
+       "Malayalam                     293\n",
+       "Punjabi                       194\n",
+       "Assamese                      180\n",
+       "Marathi & Hindi                85\n",
+       "English                        43\n",
+       "Urdu                           39\n",
+       "Manipuri                       36\n",
+       "Chattisgari                    31\n",
+       "None                           21\n",
+       "Rajasthani                     21\n",
+       "Konkani                        13\n",
+       "Tribal Language                12\n",
+       "Bhojpuri                       11\n",
+       "Hindi & Marathi                11\n",
+       "Nepali                         10\n",
+       "Mewari                         10\n",
+       "Thadou                         10\n",
+       "Hindi & Urdu                    7\n",
+       "Hindi & Rajasthani              6\n",
+       "Govan                           6\n",
+       "Karbi                           5\n",
+       "sanskrit                        3\n",
+       "Punjabi & Hindi                 3\n",
+       "HIndi                           3\n",
+       "Haryanvi                        2\n",
+       "Telugu & Kannada                2\n",
+       "Marathi & Kannada               2\n",
+       "Kannada & Telugu                2\n",
+       "Hindi & Punjabi                 2\n",
+       "Hindi & Oriya                   2\n",
+       "Urdu, Kannada & Hindi           2\n",
+       "Gujarati & Marathi              2\n",
+       "Kannada & Urdu                  2\n",
+       "Sanskrit                        1\n",
+       "Arbi                            1\n",
+       "Dehati                          1\n",
+       "Hindi & Gujarati                1\n",
+       "Santhali                        1\n",
+       "Kokborok                        1\n",
+       "Meitei                          1\n",
+       "Konkani & Hindi                 1\n",
+       "Hindi & Kannada                 1\n",
+       "Assamese and Hindi              1\n",
+       "Rabha                           1\n",
+       "Oriya & Hindi                   1\n",
+       "Aadiwasi                        1\n",
+       "Hindi, Oriya & Bengali          1\n",
+       "Hindi, Marathi & Gujarati       1\n",
+       "Oriya, Hindi & Bengali          1\n",
+       "Name: LN2_RIndLngBEOth, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# LN2_RIndLngBEOth frequency table\n",
+    "train[\"LN2_RIndLngBEOth\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert all strings to lower case to solve Hindi vs HIndi issue\n",
+    "train[\"LN2_RIndLngBEOth\"] = train[\"LN2_RIndLngBEOth\"].str.lower()\n",
+    "train[\"LN2_WIndLngBEOth\"] = train[\"LN2_WIndLngBEOth\"].str.lower()\n",
+    "test[\"LN2_RIndLngBEOth\"] = test[\"LN2_RIndLngBEOth\"].str.lower()\n",
+    "test[\"LN2_WIndLngBEOth\"] = test[\"LN2_WIndLngBEOth\"].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/divya/.local/lib/python2.7/site-packages/pandas/core/indexing.py:194: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If Hindi is one of the languages, coalesce as Hindi\n",
+    "train[\"LN2_RIndLngBEOth\"].loc[train[\"LN2_RIndLngBEOth\"].str.contains(\"hindi\", na=False)] = \"hindi\"\n",
+    "# train[\"LN2_RIndLngBEOth\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If Marathi is one of the languages, coalesce as Marathi\n",
+    "train[\"LN2_RIndLngBEOth\"].loc[train[\"LN2_RIndLngBEOth\"].str.contains(\"marathi\", na=False)] = \"marathi\"\n",
+    "# train[\"LN2_RIndLngBEOth\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If Kannada is one of the languages, coalesce as Kannada\n",
+    "train[\"LN2_RIndLngBEOth\"].loc[train[\"LN2_RIndLngBEOth\"].str.contains(\"kannada\", na=False)] = \"kannada\"\n",
+    "# train[\"LN2_RIndLngBEOth\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train[\"LN2_R\"] = pd.factorize(train[\"LN2_RIndLngBEOth\"])[0]\n",
+    "# train[\"LN2_W\"] = pd.factorize(train[\"LN2_WIndLngBEOth\"])[0]\n",
+    "# test[\"LN2_R\"] = pd.factorize(test[\"LN2_RIndLngBEOth\"])[0]\n",
+    "# test[\"LN2_W\"] = pd.factorize(test[\"LN2_WIndLngBEOth\"])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'gondi',\n",
+       " 'gujarati & hindi',\n",
+       " 'gujarati & marathi',\n",
+       " 'hindi & gujarati',\n",
+       " 'hindi & marathi',\n",
+       " 'hindi & rajasthani',\n",
+       " 'hindi & tamil',\n",
+       " 'hindi & urdu',\n",
+       " 'kannada & marathi',\n",
+       " 'kannada & telugu',\n",
+       " 'kannada & urdu',\n",
+       " 'kannada, telugu & hindi',\n",
+       " 'konkani & hindi',\n",
+       " 'kuki',\n",
+       " 'malayalam & tamil',\n",
+       " 'marathi & gujarati',\n",
+       " 'marathi & hindi',\n",
+       " 'marathi & kannada',\n",
+       " 'marathi & konkani',\n",
+       " 'oriya & hindi',\n",
+       " 'punjabi & hindi',\n",
+       " 'rajasthan or hindi',\n",
+       " 'samtal',\n",
+       " 'sowtali',\n",
+       " 'tamil & kannada',\n",
+       " 'telugu & tamil',\n",
+       " 'unnao',\n",
+       " 'urdu & hindi'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Languages in test data that are NOT in train data\n",
+    "set(test[\"LN2_RIndLngBEOth\"]) - set(train[\"LN2_RIndLngBEOth\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bengali & hindi',\n",
+       " 'english, hindi & manipuri',\n",
+       " 'gondi',\n",
+       " 'gujarati & hindi',\n",
+       " 'hindi & bhojpuri',\n",
+       " 'hindi & manipuri',\n",
+       " 'hindi & rajasthani',\n",
+       " 'hindi & tamil',\n",
+       " 'kannada & hindi',\n",
+       " 'kannada,marathi & hindi',\n",
+       " 'kuki',\n",
+       " 'malayalam & tamil',\n",
+       " 'marathi & gujarati',\n",
+       " 'marathi & konkani',\n",
+       " 'mathli',\n",
+       " 'samtal',\n",
+       " 'sowtali',\n",
+       " 'tamil & kannada',\n",
+       " 'telugu & tamil',\n",
+       " 'unnao',\n",
+       " 'urdu & marathi'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Languages in test data that are NOT in train data\n",
+    "set(test[\"LN2_WIndLngBEOth\"]) - set(train[\"LN2_WIndLngBEOth\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    1\n",
+       "2    1\n",
+       "3    1\n",
+       "4    1\n",
+       "Name: is_female, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train data response\n",
+    "yTr = train[\"is_female\"]\n",
+    "yTr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train data predictors\n",
+    "# xTr = train.loc[:, train.columns != [\"is_female\", \"LN2_RIndLngBEOth\", \"LN2_WIndLngBEOth\"]]\n",
+    "# xTr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test data predictors\n",
+    "# xTe = test.loc[:, test.columns != [\"LN2_RIndLngBEOth\", \"LN2_WIndLngBEOth\"]]\n",
+    "# xTe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rf =  RandomForestClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rf.fit(X=xTr, y=yTr)"
+   ]
   }
  ],
  "metadata": {
