--- a/code/datathon.ipynb
+++ b/code/datathon.ipynb
@@ -8,8 +8,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.preprocessing import Imputer"
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.preprocessing import Imputer\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -1119,7 +1122,7 @@
    ],
    "source": [
     "# Coalesce languages with frequency <100, into 'other' category\n",
-    "# This takes care of test data having languages that train data doesn't\n",
+    "# This takes care of test data having languages that train data doesn't have\n",
     "readTr = train[\"LN2_RIndLngBEOth\"].value_counts()\n",
     "train[\"LN2_RIndLngBEOth\"].replace(readTr[readTr<=100].index, \"other\", inplace=True)\n",
     "train[\"LN2_RIndLngBEOth\"].value_counts()"
@@ -1780,6 +1783,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Since all data are categorical, replace NaNs with the most frequent levels\n",
     "imputer = Imputer(missing_values=\"NaN\", strategy=\"most_frequent\", axis=0, copy=False)"
    ]
   },
@@ -1789,9 +1793,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Since all data are categorical, replace NaNs with the most frequent levels\n",
-    "xTrClean = imputer.fit_transform(xTr)\n",
-    "xTeClean = imputer.fit_transform(xTe)"
+    "xTrain = imputer.fit_transform(xTr)\n",
+    "xTest = imputer.fit_transform(xTe)"
    ]
   },
   {
@@ -1994,8 +1997,8 @@
    ],
    "source": [
     "# Imputed train data predictors\n",
-    "xTrClean = pd.DataFrame(xTrClean, columns=list(xTr))\n",
-    "xTrClean.head()"
+    "xTrain = pd.DataFrame(xTrain, columns=list(xTr))\n",
+    "xTrain.head()"
    ]
   },
   {
@@ -2198,8 +2201,8 @@
    ],
    "source": [
     "# Imputed test data predictors\n",
-    "xTeClean = pd.DataFrame(xTeClean, columns=list(xTe))\n",
-    "xTeClean.head()"
+    "xTest = pd.DataFrame(xTest, columns=list(xTe))\n",
+    "xTest.head()"
    ]
   },
   {
@@ -2208,20 +2211,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index([], dtype='object')"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([], dtype='object')\n",
+      "Index([], dtype='object')\n"
+     ]
     }
    ],
    "source": [
     "# No more NaNs\n",
-    "print xTrClean.columns[xTrClean.isnull().sum()>0]\n",
-    "print xTeClean.columns[xTeClean.isnull().sum()>0]"
+    "print xTrain.columns[xTrain.isnull().sum()>0]\n",
+    "print xTest.columns[xTest.isnull().sum()>0]"
    ]
   },
   {
@@ -2256,8 +2257,8 @@
    ],
    "source": [
     "# Train data response\n",
-    "yTr = train[\"is_female\"]\n",
-    "yTr.head()"
+    "yTrain = train[\"is_female\"]\n",
+    "yTrain.head()"
    ]
   },
   {
@@ -2271,6 +2272,25 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf =  RandomForestClassifier(n_estimators=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create validation dataset with 50% split\n",
+    "xTrainVal, xTestVal, yTrainVal, yTestVal = train_test_split(xTrain, yTrain, test_size=.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2279,19 +2299,463 @@
        "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=1,\n",
        "            oob_score=False, random_state=None, verbose=0,\n",
        "            warm_start=False)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf =  RandomForestClassifier()\n",
-    "rf.fit(X=xTrClean, y=yTr)"
+    "# Train on validation train data\n",
+    "rf.fit(X=xTrainVal, y=yTrainVal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on validation test data\n",
+    "yPredVal = rf.predict(xTestVal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3696,  527],\n",
+       "       [ 527, 4378]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion matrix. More diagonal entries - good!\n",
+    "confusion_matrix(yTestVal, yPredVal, labels=[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.88      0.88      0.88      4223\n",
+      "          1       0.89      0.89      0.89      4905\n",
+      "\n",
+      "avg / total       0.88      0.88      0.88      9128\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(yTestVal, yPredVal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The true positive rate (Precision) is 89% for each category. The Random Forest model correctly classifies 3688 out of 4230 males and 4396 out of 4898 females."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.0972, 'DL0'),\n",
+       " (0.0971, 'DG6'),\n",
+       " (0.0576, 'DL1'),\n",
+       " (0.0557, 'MT1A'),\n",
+       " (0.0253, 'FL4'),\n",
+       " (0.0239, 'GN5'),\n",
+       " (0.0201, 'DG3'),\n",
+       " (0.0191, 'GN4'),\n",
+       " (0.0159, 'DG1'),\n",
+       " (0.0149, 'MT10'),\n",
+       " (0.0149, 'GN2'),\n",
+       " (0.0137, 'MT2'),\n",
+       " (0.0123, 'GN3'),\n",
+       " (0.0118, 'DG4'),\n",
+       " (0.0115, 'DG8a'),\n",
+       " (0.0115, 'AA14'),\n",
+       " (0.0109, 'AA7'),\n",
+       " (0.0108, 'DL5'),\n",
+       " (0.0107, 'AA15'),\n",
+       " (0.0078, 'DG5_4'),\n",
+       " (0.0077, 'DL14'),\n",
+       " (0.0073, 'GN1'),\n",
+       " (0.0073, 'AA4'),\n",
+       " (0.0061, 'DG9a'),\n",
+       " (0.006, 'FL10'),\n",
+       " (0.0057, 'FB20'),\n",
+       " (0.0057, 'DL24'),\n",
+       " (0.0055, 'LN1A'),\n",
+       " (0.0055, 'IFI14_2'),\n",
+       " (0.0053, 'FL9B'),\n",
+       " (0.0051, 'MT17_3'),\n",
+       " (0.005, 'MT1'),\n",
+       " (0.005, 'FF2A'),\n",
+       " (0.0049, 'DL15'),\n",
+       " (0.0048, 'IFI14_1'),\n",
+       " (0.0048, 'FL9A'),\n",
+       " (0.0047, 'IFI16_2'),\n",
+       " (0.0046, 'LN2_1'),\n",
+       " (0.0046, 'IFI15_2'),\n",
+       " (0.0045, 'LN1B'),\n",
+       " (0.0043, 'FL9C'),\n",
+       " (0.0043, 'FL8_1'),\n",
+       " (0.0042, 'IFI17_1'),\n",
+       " (0.0042, 'IFI16_1'),\n",
+       " (0.0042, 'IFI15_1'),\n",
+       " (0.0041, 'LN2_3'),\n",
+       " (0.0041, 'FL8_7'),\n",
+       " (0.0041, 'FL8_5'),\n",
+       " (0.004, 'LN2_2'),\n",
+       " (0.004, 'FL8_2'),\n",
+       " (0.004, 'FL11'),\n",
+       " (0.0039, 'LN2_4'),\n",
+       " (0.0039, 'FL8_4'),\n",
+       " (0.0039, 'FL8_3'),\n",
+       " (0.0038, 'IFI24'),\n",
+       " (0.0038, 'FL8_6'),\n",
+       " (0.0038, 'FL3'),\n",
+       " (0.0038, 'DL4_6'),\n",
+       " (0.0037, 'MT7'),\n",
+       " (0.0037, 'FF9'),\n",
+       " (0.0035, 'DL4_5'),\n",
+       " (0.0035, 'DG8b'),\n",
+       " (0.0034, 'IFI17_2'),\n",
+       " (0.0033, 'MT18_4'),\n",
+       " (0.0033, 'MT18_1'),\n",
+       " (0.0033, 'LN2_W'),\n",
+       " (0.0033, 'FL15'),\n",
+       " (0.0033, 'FB19'),\n",
+       " (0.0033, 'DG8c'),\n",
+       " (0.0033, 'AA3'),\n",
+       " (0.0032, 'LN2_R'),\n",
+       " (0.0032, 'FB13'),\n",
+       " (0.0031, 'MT18_8'),\n",
+       " (0.0031, 'FL1'),\n",
+       " (0.003, 'MT17_5'),\n",
+       " (0.0029, 'FL16'),\n",
+       " (0.0028, 'FL17'),\n",
+       " (0.0028, 'FB24'),\n",
+       " (0.0028, 'FB2'),\n",
+       " (0.0028, 'FB18'),\n",
+       " (0.0026, 'MT15'),\n",
+       " (0.0026, 'DG3A'),\n",
+       " (0.0025, 'AA6'),\n",
+       " (0.0024, 'MT17_12'),\n",
+       " (0.0024, 'IFI14_3'),\n",
+       " (0.0023, 'MT17_2'),\n",
+       " (0.0023, 'FL2'),\n",
+       " (0.0023, 'FL14'),\n",
+       " (0.0022, 'MT17_11'),\n",
+       " (0.0022, 'MT17_1'),\n",
+       " (0.0022, 'IFI18'),\n",
+       " (0.0021, 'MT17_6'),\n",
+       " (0.0021, 'IFI15_3'),\n",
+       " (0.0021, 'IFI14_4'),\n",
+       " (0.0021, 'FF6_2'),\n",
+       " (0.0021, 'FF10_2'),\n",
+       " (0.0021, 'DL4_25'),\n",
+       " (0.0021, 'DG5_6'),\n",
+       " (0.0021, 'DG5_2'),\n",
+       " (0.002, 'MT17_9'),\n",
+       " (0.002, 'DG5_7'),\n",
+       " (0.0019, 'MT18_2'),\n",
+       " (0.0019, 'DL19'),\n",
+       " (0.0019, 'DL18'),\n",
+       " (0.0018, 'MM1'),\n",
+       " (0.0018, 'IFI14_5'),\n",
+       " (0.0018, 'FF6_6'),\n",
+       " (0.0018, 'FF6_4'),\n",
+       " (0.0018, 'FF13'),\n",
+       " (0.0018, 'DL6'),\n",
+       " (0.0018, 'DL16'),\n",
+       " (0.0018, 'DL11'),\n",
+       " (0.0017, 'MT17_10'),\n",
+       " (0.0017, 'FF6_7'),\n",
+       " (0.0017, 'FB1_1'),\n",
+       " (0.0017, 'DL4_2'),\n",
+       " (0.0017, 'DL23'),\n",
+       " (0.0017, 'DL17'),\n",
+       " (0.0017, 'DG5_10'),\n",
+       " (0.0016, 'IFI15_7'),\n",
+       " (0.0016, 'IFI15_4'),\n",
+       " (0.0016, 'IFI14_7'),\n",
+       " (0.0016, 'FL7_4'),\n",
+       " (0.0016, 'FL7_3'),\n",
+       " (0.0016, 'FL7_1'),\n",
+       " (0.0016, 'FL6_1'),\n",
+       " (0.0016, 'FL18'),\n",
+       " (0.0016, 'FL13'),\n",
+       " (0.0016, 'FF6_8'),\n",
+       " (0.0016, 'FF2'),\n",
+       " (0.0016, 'FF1'),\n",
+       " (0.0016, 'FB3'),\n",
+       " (0.0016, 'DL26_12'),\n",
+       " (0.0016, 'DL22'),\n",
+       " (0.0016, 'DL21'),\n",
+       " (0.0016, 'DL20'),\n",
+       " (0.0015, 'FL7_2'),\n",
+       " (0.0015, 'FL6_3'),\n",
+       " (0.0015, 'FF6_9'),\n",
+       " (0.0015, 'FF6_5'),\n",
+       " (0.0015, 'FF6_3'),\n",
+       " (0.0015, 'FF6_1'),\n",
+       " (0.0015, 'FF5'),\n",
+       " (0.0015, 'FF14_1'),\n",
+       " (0.0015, 'FB1_3'),\n",
+       " (0.0015, 'FB19B_3'),\n",
+       " (0.0015, 'FB19B_1'),\n",
+       " (0.0015, 'DG5_5'),\n",
+       " (0.0014, 'MT17_4'),\n",
+       " (0.0014, 'IFI15_5'),\n",
+       " (0.0014, 'FL7_6'),\n",
+       " (0.0014, 'FB19B_96'),\n",
+       " (0.0014, 'FB19B_4'),\n",
+       " (0.0014, 'FB19B_2'),\n",
+       " (0.0013, 'MT17_8'),\n",
+       " (0.0013, 'FL7_5'),\n",
+       " (0.0013, 'FL6_4'),\n",
+       " (0.0013, 'FL6_2'),\n",
+       " (0.0013, 'FF6_10'),\n",
+       " (0.0013, 'FB1_2'),\n",
+       " (0.0013, 'DL26_99'),\n",
+       " (0.0013, 'DL25_3'),\n",
+       " (0.0013, 'DG5_1'),\n",
+       " (0.0012, 'IFI3_3'),\n",
+       " (0.0012, 'IFI14_6'),\n",
+       " (0.0012, 'FL12'),\n",
+       " (0.0012, 'FB22_8'),\n",
+       " (0.0012, 'FB22_1'),\n",
+       " (0.0012, 'FB19B_5'),\n",
+       " (0.0012, 'DL26_5'),\n",
+       " (0.0012, 'DL25_1'),\n",
+       " (0.0011, 'MT18_5'),\n",
+       " (0.0011, 'IFI1_3'),\n",
+       " (0.0011, 'IFI15_6'),\n",
+       " (0.0011, 'DL25_2'),\n",
+       " (0.001, 'MT18_3'),\n",
+       " (0.001, 'FB16_8'),\n",
+       " (0.001, 'DL25_5'),\n",
+       " (0.0009, 'MT17_13'),\n",
+       " (0.0009, 'FF7_4'),\n",
+       " (0.0009, 'FF14_2'),\n",
+       " (0.0009, 'FF10_1'),\n",
+       " (0.0009, 'DL25_8'),\n",
+       " (0.0009, 'DL25_4'),\n",
+       " (0.0008, 'MT17_7'),\n",
+       " (0.0008, 'FB27_2'),\n",
+       " (0.0008, 'FB16_7'),\n",
+       " (0.0008, 'FB16_1'),\n",
+       " (0.0008, 'DL4_3'),\n",
+       " (0.0008, 'DL4_17'),\n",
+       " (0.0008, 'DL26_1'),\n",
+       " (0.0008, 'DL25_7'),\n",
+       " (0.0007, 'FB22_9'),\n",
+       " (0.0007, 'DL4_19'),\n",
+       " (0.0007, 'DL4_16'),\n",
+       " (0.0007, 'DL26_3'),\n",
+       " (0.0007, 'DL25_6'),\n",
+       " (0.0006, 'FF7_2'),\n",
+       " (0.0006, 'FB29_1'),\n",
+       " (0.0006, 'FB16_6'),\n",
+       " (0.0005, 'MM3_2'),\n",
+       " (0.0005, 'IFI1_5'),\n",
+       " (0.0005, 'FF7_5'),\n",
+       " (0.0005, 'FB29_3'),\n",
+       " (0.0005, 'FB22_12'),\n",
+       " (0.0005, 'DL4_7'),\n",
+       " (0.0005, 'DL4_20'),\n",
+       " (0.0005, 'DL4_1'),\n",
+       " (0.0005, 'DL26_6'),\n",
+       " (0.0005, 'DG5_11'),\n",
+       " (0.0004, 'MM2_2'),\n",
+       " (0.0004, 'IFI3_1'),\n",
+       " (0.0004, 'FF7_1'),\n",
+       " (0.0004, 'FF19_6'),\n",
+       " (0.0004, 'FF19_4'),\n",
+       " (0.0004, 'FF19_1'),\n",
+       " (0.0004, 'FB29_2'),\n",
+       " (0.0004, 'FB22_10'),\n",
+       " (0.0004, 'FB19A_4'),\n",
+       " (0.0004, 'FB19A_3'),\n",
+       " (0.0004, 'FB19A_2'),\n",
+       " (0.0004, 'FB19A_1'),\n",
+       " (0.0004, 'DL4_4'),\n",
+       " (0.0004, 'DL4_18'),\n",
+       " (0.0004, 'DL26_9'),\n",
+       " (0.0004, 'DG5_3'),\n",
+       " (0.0003, 'MMP1_1'),\n",
+       " (0.0003, 'MM3_13'),\n",
+       " (0.0003, 'MM3_1'),\n",
+       " (0.0003, 'IFI3_2'),\n",
+       " (0.0003, 'IFI1_7'),\n",
+       " (0.0003, 'IFI1_2'),\n",
+       " (0.0003, 'IFI1_1'),\n",
+       " (0.0003, 'FF19_3'),\n",
+       " (0.0003, 'FF19_2'),\n",
+       " (0.0003, 'FF14_23'),\n",
+       " (0.0003, 'FF14_11'),\n",
+       " (0.0003, 'FB27_3'),\n",
+       " (0.0003, 'FB27_1'),\n",
+       " (0.0003, 'FB19A_5'),\n",
+       " (0.0003, 'DL4_24'),\n",
+       " (0.0003, 'DL26_8'),\n",
+       " (0.0003, 'DL26_7'),\n",
+       " (0.0003, 'DL26_4'),\n",
+       " (0.0003, 'DL26_2'),\n",
+       " (0.0003, 'DG5_8'),\n",
+       " (0.0002, 'MT18_96'),\n",
+       " (0.0002, 'FF19_8'),\n",
+       " (0.0002, 'FF19_7'),\n",
+       " (0.0002, 'FF19_5'),\n",
+       " (0.0002, 'FF14_9'),\n",
+       " (0.0002, 'FF14_4'),\n",
+       " (0.0002, 'FF14_20'),\n",
+       " (0.0002, 'FF14_16'),\n",
+       " (0.0002, 'FF10_3'),\n",
+       " (0.0002, 'FB29_6'),\n",
+       " (0.0002, 'FB29_5'),\n",
+       " (0.0002, 'FB27_9'),\n",
+       " (0.0002, 'FB27_4'),\n",
+       " (0.0002, 'FB22_3'),\n",
+       " (0.0002, 'FB22_11'),\n",
+       " (0.0002, 'FB16_2'),\n",
+       " (0.0002, 'DL4_9'),\n",
+       " (0.0002, 'DL4_23'),\n",
+       " (0.0002, 'DL4_14'),\n",
+       " (0.0002, 'DL4_10'),\n",
+       " (0.0001, 'MMP1_3'),\n",
+       " (0.0001, 'MM3_6'),\n",
+       " (0.0001, 'MM3_5'),\n",
+       " (0.0001, 'MM3_14'),\n",
+       " (0.0001, 'MM2_13'),\n",
+       " (0.0001, 'MM2_1'),\n",
+       " (0.0001, 'IFI1_9'),\n",
+       " (0.0001, 'IFI1_8'),\n",
+       " (0.0001, 'IFI1_6'),\n",
+       " (0.0001, 'FF7_7'),\n",
+       " (0.0001, 'FF7_6'),\n",
+       " (0.0001, 'FF7_3'),\n",
+       " (0.0001, 'FF14_6'),\n",
+       " (0.0001, 'FF14_5'),\n",
+       " (0.0001, 'FF14_3'),\n",
+       " (0.0001, 'FF14_18'),\n",
+       " (0.0001, 'FF14_17'),\n",
+       " (0.0001, 'FF14_15'),\n",
+       " (0.0001, 'FF14_12'),\n",
+       " (0.0001, 'FF14_10'),\n",
+       " (0.0001, 'FF10_6'),\n",
+       " (0.0001, 'FF10_5'),\n",
+       " (0.0001, 'FF10_4'),\n",
+       " (0.0001, 'FB29_96'),\n",
+       " (0.0001, 'FB29_4'),\n",
+       " (0.0001, 'FB27_7'),\n",
+       " (0.0001, 'FB27_6'),\n",
+       " (0.0001, 'FB22_4'),\n",
+       " (0.0001, 'FB22_2'),\n",
+       " (0.0001, 'FB19A_96'),\n",
+       " (0.0001, 'FB16_96'),\n",
+       " (0.0001, 'FB16_3'),\n",
+       " (0.0001, 'DL4_8'),\n",
+       " (0.0001, 'DL4_22'),\n",
+       " (0.0001, 'DL4_21'),\n",
+       " (0.0001, 'DL4_13'),\n",
+       " (0.0001, 'DL4_12'),\n",
+       " (0.0001, 'DL4_11'),\n",
+       " (0.0001, 'DL26_10'),\n",
+       " (0.0001, 'DG5_9'),\n",
+       " (0.0, 'MT18_6'),\n",
+       " (0.0, 'MMP1_96'),\n",
+       " (0.0, 'MMP1_9'),\n",
+       " (0.0, 'MMP1_8'),\n",
+       " (0.0, 'MMP1_7'),\n",
+       " (0.0, 'MMP1_6'),\n",
+       " (0.0, 'MMP1_5'),\n",
+       " (0.0, 'MMP1_4'),\n",
+       " (0.0, 'MMP1_2'),\n",
+       " (0.0, 'MMP1_11'),\n",
+       " (0.0, 'MMP1_10'),\n",
+       " (0.0, 'MM3_9'),\n",
+       " (0.0, 'MM3_8'),\n",
+       " (0.0, 'MM3_7'),\n",
+       " (0.0, 'MM3_4'),\n",
+       " (0.0, 'MM3_3'),\n",
+       " (0.0, 'MM3_12'),\n",
+       " (0.0, 'MM3_11'),\n",
+       " (0.0, 'MM3_10'),\n",
+       " (0.0, 'MM2_9'),\n",
+       " (0.0, 'MM2_8'),\n",
+       " (0.0, 'MM2_7'),\n",
+       " (0.0, 'MM2_6'),\n",
+       " (0.0, 'MM2_5'),\n",
+       " (0.0, 'MM2_4'),\n",
+       " (0.0, 'MM2_3'),\n",
+       " (0.0, 'MM2_16'),\n",
+       " (0.0, 'MM2_15'),\n",
+       " (0.0, 'MM2_14'),\n",
+       " (0.0, 'MM2_12'),\n",
+       " (0.0, 'MM2_11'),\n",
+       " (0.0, 'MM2_10'),\n",
+       " (0.0, 'IFI1_4'),\n",
+       " (0.0, 'FF7_96'),\n",
+       " (0.0, 'FF14_96'),\n",
+       " (0.0, 'FF14_8'),\n",
+       " (0.0, 'FF14_7'),\n",
+       " (0.0, 'FF14_22'),\n",
+       " (0.0, 'FF14_21'),\n",
+       " (0.0, 'FF14_19'),\n",
+       " (0.0, 'FF14_14'),\n",
+       " (0.0, 'FF14_13'),\n",
+       " (0.0, 'FF10_96'),\n",
+       " (0.0, 'FB27_96'),\n",
+       " (0.0, 'FB27_8'),\n",
+       " (0.0, 'FB27_5'),\n",
+       " (0.0, 'FB22_96'),\n",
+       " (0.0, 'FB22_7'),\n",
+       " (0.0, 'FB22_6'),\n",
+       " (0.0, 'FB22_5'),\n",
+       " (0.0, 'FB16_5'),\n",
+       " (0.0, 'FB16_4'),\n",
+       " (0.0, 'DL4_15'),\n",
+       " (0.0, 'DG5_96')]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Variable importance\n",
+    "sorted(zip(map(lambda x: round(x, 4), rf.feature_importances_), xTrain.columns), reverse=True)"
    ]
   },
   {
@@ -2299,6 +2763,35 @@
    "metadata": {},
    "source": [
     "### Predict with RF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on test data\n",
+    "yTest = rf.predict(xTest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write prediction to CSV file\n",
+    "submissionRF = pd.DataFrame({\"test_id\": range(0, len(yTest)), \"is_female\": yTest})\n",
+    "submissionRF = submissionRF[[\"test_id\", \"is_female\"]]\n",
+    "submissionRF.to_csv(\"../submission/submissionRF.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model yielded **ROC score of 0.88142** on Kaggle submission."
    ]
   }
  ],
