prob predictions from tuned RF with feature selection

--- a/code/random-forest.ipynb
+++ b/code/random-forest.ipynb
@@ -2117,63 +2117,22 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise',\n",
-       "       estimator=RandomForestClassifier(bootstrap=True, class_weight='balanced',\n",
-       "            criterion='gini', max_depth=None, max_features='auto',\n",
-       "            max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "            min_impurity_split=None, min_samples_leaf=3,\n",
-       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "            n_estimators=10, n_jobs=-1, oob_score=False, random_state=None,\n",
-       "            verbose=0, warm_start=False),\n",
-       "       fit_params=None, iid=True, n_jobs=1,\n",
-       "       param_grid={'n_estimators': [100, 300, 500, 700, 900], 'oob_score': [True, False]},\n",
-       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
-       "       scoring=None, verbose=0)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gridRF = GridSearchCV(RandomForestClassifier(class_weight=\"balanced\", \n",
-    "                                             min_samples_leaf=3, \n",
-    "                                             n_jobs=-1), \n",
-    "                      cv=5, \n",
-    "                      param_grid={\n",
-    "                          \"n_estimators\": [100, 300, 500, 700, 900],\n",
-    "                          \"oob_score\": [True, False]})\n",
-    "gridRF.fit(xTrain, yTrain)"
+    "# gridRF = GridSearchCV(RandomForestClassifier(class_weight=\"balanced\", \n",
+    "#                                              min_samples_leaf=3, \n",
+    "#                                              n_jobs=-1), \n",
+    "#                       cv=5, \n",
+    "#                       param_grid={\n",
+    "#                           \"n_estimators\": [100, 300, 500, 700, 900],\n",
+    "#                           \"oob_score\": [True, False]})\n",
+    "# gridRF.fit(xTrain, yTrain)\n",
+    "# gridRF.best_params_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'n_estimators': 700, 'oob_score': False}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gridRF.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2198,7 +2157,7 @@
        "            random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2214,72 +2173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict on validation test data\n",
-    "yPredVal = rf.predict(xTestVal)"
+    "yPredVal = rf.predict_proba(xTestVal)[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3751,  479],\n",
-       "       [ 554, 4344]])"
+       "0.95289092721796043"
       ]
      },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Confusion matrix. More diagonal entries - good!\n",
-    "confusion_matrix(yTestVal, yPredVal, labels=[0,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.87      0.89      0.88      4230\n",
-      "          1       0.90      0.89      0.89      4898\n",
-      "\n",
-      "avg / total       0.89      0.89      0.89      9128\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Overall true positive rate (Recall) is 88%\n",
-    "print(classification_report(yTestVal, yPredVal))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8868269192713385"
-      ]
-     },
-     "execution_count": 55,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2298,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -2306,29 +2219,29 @@
     {
      "data": {
       "text/plain": [
-       "[(0.1077, 'DL0'),\n",
-       " (0.0981, 'DG6'),\n",
-       " (0.0787, 'DL1'),\n",
-       " (0.0681, 'MT1A'),\n",
-       " (0.0345, 'FL4'),\n",
-       " (0.0266, 'DG3'),\n",
-       " (0.0261, 'GN5'),\n",
-       " (0.0221, 'GN3'),\n",
-       " (0.0219, 'GN4'),\n",
-       " (0.0199, 'MT2'),\n",
-       " (0.018, 'MT10'),\n",
-       " (0.0162, 'DG1'),\n",
-       " (0.0158, 'GN2'),\n",
-       " (0.0135, 'DG4'),\n",
-       " (0.0108, 'DG8a'),\n",
-       " (0.0101, 'AA15'),\n",
-       " (0.0101, 'AA14'),\n",
-       " (0.0098, 'AA7'),\n",
-       " (0.0094, 'DG5_4'),\n",
-       " (0.0093, 'DL5')]"
+       "[(0.1342, 'DL0'),\n",
+       " (0.0926, 'DG6'),\n",
+       " (0.075, 'DL1'),\n",
+       " (0.0668, 'MT1A'),\n",
+       " (0.0318, 'FL4'),\n",
+       " (0.0265, 'GN5'),\n",
+       " (0.0263, 'DG3'),\n",
+       " (0.0242, 'GN3'),\n",
+       " (0.0235, 'GN4'),\n",
+       " (0.0169, 'MT2'),\n",
+       " (0.0165, 'DG1'),\n",
+       " (0.0163, 'MT10'),\n",
+       " (0.0143, 'GN2'),\n",
+       " (0.013, 'DG4'),\n",
+       " (0.0106, 'DG8a'),\n",
+       " (0.0105, 'DL5'),\n",
+       " (0.0104, 'AA14'),\n",
+       " (0.0103, 'AA7'),\n",
+       " (0.01, 'AA15'),\n",
+       " (0.0089, 'GN1')]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2342,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2353,72 +2266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Re-fit with important features only\n",
     "topXTrainVal, topXTestVal, yTrainVal, yTestVal = train_test_split(topXTrain, yTrain, test_size=.5)\n",
     "rf.fit(X=topXTrainVal, y=yTrainVal)\n",
-    "yPredVal = rf.predict(topXTestVal)"
+    "yPredVal = rf.predict_proba(topXTestVal)[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3847,  386],\n",
-       "       [ 557, 4338]])"
+       "0.96031411737740746"
       ]
      },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confusion_matrix(yTestVal, yPredVal, labels=[0,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.87      0.91      0.89      4233\n",
-      "          1       0.92      0.89      0.90      4895\n",
-      "\n",
-      "avg / total       0.90      0.90      0.90      9128\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(yTestVal, yPredVal))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.89751106812637793"
-      ]
-     },
-     "execution_count": 61,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2436,17 +2305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict on test data\n",
-    "yTest = rf.predict(topXTest)"
+    "yTest = rf.predict_proba(topXTest)[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,13 +2323,6 @@
     "submissionRF = pd.DataFrame({\"test_id\": range(0, len(yTest)), \"is_female\": yTest})\n",
     "submissionRF = submissionRF[[\"test_id\", \"is_female\"]]  # change column order\n",
     "submissionRF.to_csv(\"../submission/submissionRF.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This model yielded **ROC score of 0.89967** on Kaggle submission."
    ]
   }
  ],
