--- a/code/random-forest.ipynb
+++ b/code/random-forest.ipynb
@@ -7,12 +7,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder, Imputer\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score"
+    "from sklearn.metrics import roc_auc_score"
    ]
   },
   {
@@ -2189,7 +2188,7 @@
     {
      "data": {
       "text/plain": [
-       "0.95289092721796043"
+       "0.95683769125209039"
       ]
      },
      "execution_count": 52,
@@ -2219,26 +2218,26 @@
     {
      "data": {
       "text/plain": [
-       "[(0.1342, 'DL0'),\n",
-       " (0.0926, 'DG6'),\n",
-       " (0.075, 'DL1'),\n",
-       " (0.0668, 'MT1A'),\n",
-       " (0.0318, 'FL4'),\n",
-       " (0.0265, 'GN5'),\n",
-       " (0.0263, 'DG3'),\n",
-       " (0.0242, 'GN3'),\n",
-       " (0.0235, 'GN4'),\n",
-       " (0.0169, 'MT2'),\n",
-       " (0.0165, 'DG1'),\n",
-       " (0.0163, 'MT10'),\n",
-       " (0.0143, 'GN2'),\n",
-       " (0.013, 'DG4'),\n",
-       " (0.0106, 'DG8a'),\n",
-       " (0.0105, 'DL5'),\n",
-       " (0.0104, 'AA14'),\n",
-       " (0.0103, 'AA7'),\n",
-       " (0.01, 'AA15'),\n",
-       " (0.0089, 'GN1')]"
+       "[(0.1135, 'DL0'),\n",
+       " (0.1004, 'DG6'),\n",
+       " (0.0701, 'DL1'),\n",
+       " (0.0652, 'MT1A'),\n",
+       " (0.032, 'FL4'),\n",
+       " (0.0264, 'DG3'),\n",
+       " (0.024, 'GN5'),\n",
+       " (0.022, 'GN4'),\n",
+       " (0.0201, 'GN3'),\n",
+       " (0.0198, 'MT10'),\n",
+       " (0.0195, 'MT2'),\n",
+       " (0.0163, 'DG1'),\n",
+       " (0.0156, 'GN2'),\n",
+       " (0.0133, 'DG4'),\n",
+       " (0.0108, 'DG8a'),\n",
+       " (0.0105, 'DG5_4'),\n",
+       " (0.0104, 'AA7'),\n",
+       " (0.0102, 'AA15'),\n",
+       " (0.01, 'AA14'),\n",
+       " (0.0091, 'DL5')]"
       ]
      },
      "execution_count": 53,
@@ -2284,7 +2283,7 @@
     {
      "data": {
       "text/plain": [
-       "0.96031411737740746"
+       "0.95850422058372431"
       ]
      },
      "execution_count": 56,
