explored feature interaction

--- a/code/feature-interaction.ipynb
+++ b/code/feature-interaction.ipynb
@@ -7,11 +7,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import roc_auc_score"
    ]
   },
@@ -48,9 +50,8 @@
    },
    "outputs": [],
    "source": [
-    "topFeat = ['DL0', 'DG6', 'DL1', 'MT1A', 'FL4', 'DG3', 'GN5', 'GN3', 'GN4', 'MT2', 'MT10', 'DG1', 'GN2', 'DG4', 'DG8a']\n",
-    "train = pd.read_csv(\"../data/train-cleaned.csv\", low_memory=False, usecols=topFeat+['is_female'])\n",
-    "test = pd.read_csv(\"../data/test-cleaned.csv\", low_memory=False, usecols=topFeat)"
+    "train = pd.read_csv(\"../data/train-cleaned.csv\", low_memory=False, usecols=['DL0', 'GN4', 'MT2', 'is_female'])\n",
+    "test = pd.read_csv(\"../data/test-cleaned.csv\", low_memory=False, usecols=['DL0', 'GN4', 'MT2'])"
    ]
   },
   {
@@ -79,58 +80,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DG1</th>\n",
        "      <th>is_female</th>\n",
-       "      <th>DG3</th>\n",
-       "      <th>DG4</th>\n",
-       "      <th>DG6</th>\n",
-       "      <th>DG8a</th>\n",
        "      <th>DL0</th>\n",
-       "      <th>DL1</th>\n",
-       "      <th>MT1A</th>\n",
        "      <th>MT2</th>\n",
-       "      <th>MT10</th>\n",
-       "      <th>FL4</th>\n",
-       "      <th>GN2</th>\n",
-       "      <th>GN3</th>\n",
        "      <th>GN4</th>\n",
-       "      <th>GN5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1975.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>99.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>99.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1981.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
@@ -138,59 +103,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1995.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1980.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>99.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1958.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -198,19 +127,12 @@
        "</div>"
       ],
       "text/plain": [
-       "      DG1  is_female  DG3  DG4  DG6  DG8a  DL0  DL1  MT1A  MT2  MT10   FL4  \\\n",
-       "0  1975.0        1.0  3.0  5.0  2.0   4.0  1.0  1.0  99.0  2.0   2.0  99.0   \n",
-       "1  1981.0        1.0  8.0  5.0  2.0   4.0  2.0  7.0   4.0  2.0   2.0   2.0   \n",
-       "2  1995.0        1.0  3.0  2.0  7.0   4.0  2.0  7.0   2.0  2.0   2.0   2.0   \n",
-       "3  1980.0        1.0  3.0  5.0  2.0   2.0  2.0  7.0   2.0  1.0   1.0   2.0   \n",
-       "4  1958.0        1.0  3.0  6.0  2.0  99.0  2.0  7.0   1.0  2.0   2.0   1.0   \n",
-       "\n",
-       "    GN2   GN3   GN4   GN5  \n",
-       "0  99.0  99.0  99.0  99.0  \n",
-       "1   1.0   2.0   2.0   2.0  \n",
-       "2   2.0   2.0   2.0   2.0  \n",
-       "3   2.0   2.0  99.0  99.0  \n",
-       "4   1.0   1.0   1.0   1.0  "
+       "   is_female  DL0  MT2   GN4\n",
+       "0        1.0  1.0  2.0  99.0\n",
+       "1        1.0  2.0  2.0   2.0\n",
+       "2        1.0  2.0  2.0   2.0\n",
+       "3        1.0  2.0  1.0  99.0\n",
+       "4        1.0  2.0  2.0   1.0"
       ]
      },
      "execution_count": 3,
@@ -248,112 +170,40 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DG1</th>\n",
-       "      <th>DG3</th>\n",
-       "      <th>DG4</th>\n",
-       "      <th>DG6</th>\n",
-       "      <th>DG8a</th>\n",
        "      <th>DL0</th>\n",
-       "      <th>DL1</th>\n",
-       "      <th>MT1A</th>\n",
        "      <th>MT2</th>\n",
-       "      <th>MT10</th>\n",
-       "      <th>FL4</th>\n",
-       "      <th>GN2</th>\n",
-       "      <th>GN3</th>\n",
        "      <th>GN4</th>\n",
-       "      <th>GN5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1979.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1993.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1980.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1991.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1985.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -361,19 +211,12 @@
        "</div>"
       ],
       "text/plain": [
-       "      DG1  DG3  DG4  DG6  DG8a  DL0  DL1  MT1A  MT2  MT10   FL4  GN2  GN3  \\\n",
-       "0  1979.0  8.0  1.0  2.0   3.0  2.0  4.0   2.0  2.0   2.0   2.0  1.0  3.0   \n",
-       "1  1993.0  1.0  6.0  3.0   5.0  2.0  1.0   1.0  1.0   1.0   3.0  1.0  1.0   \n",
-       "2  1980.0  3.0  6.0  2.0   2.0  2.0  7.0   2.0  2.0   2.0   2.0  2.0  2.0   \n",
-       "3  1991.0  3.0  1.0  2.0   2.0  2.0  4.0   2.0  2.0   1.0   2.0  2.0  2.0   \n",
-       "4  1985.0  3.0  6.0  1.0   2.0  2.0  7.0   1.0  2.0   2.0  99.0  1.0  1.0   \n",
-       "\n",
-       "   GN4  GN5  \n",
-       "0  3.0  3.0  \n",
-       "1  1.0  1.0  \n",
-       "2  2.0  2.0  \n",
-       "3  2.0  2.0  \n",
-       "4  1.0  1.0  "
+       "   DL0  MT2  GN4\n",
+       "0  2.0  2.0  3.0\n",
+       "1  2.0  1.0  1.0\n",
+       "2  2.0  2.0  2.0\n",
+       "3  2.0  2.0  2.0\n",
+       "4  2.0  2.0  1.0"
       ]
      },
      "execution_count": 4,
@@ -394,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18255, 16)\n",
-      "(27285, 15)\n"
+      "(18255, 4)\n",
+      "(27285, 3)\n"
      ]
     }
    ],
@@ -410,7 +253,7 @@
    "source": [
     "# B. Hypothesis\n",
     "\n",
-    "If a person owns a mobile phone (MT2) and makes financial decisions (GN4), then that person is a male."
+    "If a person owns a mobile phone (MT2) and makes financial decisions (GN4), then that person is a male. This person is also likely the household head."
    ]
   },
   {
@@ -481,14 +324,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    24\n",
+      "1    22\n",
+      "2    22\n",
+      "3    14\n",
+      "4    21\n",
+      "dtype: object\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0    24\n",
-       "1    22\n",
-       "2    22\n",
-       "3    14\n",
-       "4    21\n",
-       "dtype: object"
+       "array(['24', '22', '14', '21', '13', '12', '11', '23'], dtype=object)"
       ]
      },
      "execution_count": 8,
@@ -497,9 +347,10 @@
     }
    ],
    "source": [
-    "# Take cartesian product of all MT2 and GN4 values\n",
+    "# Take string concat (cartesian product) of the values of MT2 and GN4\n",
     "MT2_GN4 = train['MT2'].map(int).map(str)+train['GN4'].map(str)\n",
-    "MT2_GN4[:5]"
+    "print MT2_GN4[:5]\n",
+    "MT2_GN4.unique()"
    ]
   },
   {
@@ -525,10 +376,64 @@
     }
    ],
    "source": [
-    "# 1-hot encode the cartesian product values, MT2_GN4\n",
+    "# 1-hot encode the cartesian product values of MT2 and GN4\n",
     "oneHot = OneHotEncoder()\n",
     "MT2_GN4 = oneHot.fit_transform(MT2_GN4.values.reshape(-1,1))\n",
     "MT2_GN4.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    0\n",
+       "2    0\n",
+       "3    0\n",
+       "4    0\n",
+       "Name: DL0, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Label household head as 1\n",
+    "train['DL0'] = train['DL0'].map({1:1, 2:0})\n",
+    "train['DL0'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ...,  0.,  1.,  1.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 1.,  0.,  0., ...,  0.,  0.,  1.],\n",
+       "       [ 1.,  0.,  0., ...,  0.,  0.,  1.],\n",
+       "       [ 0.,  0.,  1., ...,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.append(MT2_GN4.toarray(), train['DL0'].values.reshape(-1,1), axis=1)\n",
+    "x"
    ]
   },
   {
@@ -542,52 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rescale data from [0,1]\n",
     "scaler = MinMaxScaler()\n",
     "train[['MT2', 'GN4']] = scaler.fit_transform(train[['MT2', 'GN4']]) \n",
     "test[['MT2', 'GN4']] = scaler.fit_transform(test[['MT2', 'GN4']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xTrainVal, xTestVal, yTrainVal, yTestVal = train_test_split(train[['MT2', 'GN4']], train['is_female'], test_size=.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.69065671188898337"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lreg = LogisticRegression()\n",
-    "lreg.fit(xTrainVal, yTrainVal)\n",
-    "yPredVal = lreg.predict_proba(xTestVal)[:,1]\n",
-    "roc_auc_score(yTestVal, yPredVal)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Fit and predict logistic regression and SVM on 1-hot encoded values of the cartesian product of MT2 and GN4."
    ]
   },
   {
@@ -596,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xTrainVal, xTestVal, yTrainVal, yTestVal = train_test_split(MT2_GN4, train['is_female'], test_size=.5)"
+    "xTrainVal, xTestVal, yTrainVal, yTestVal = train_test_split(train[['MT2', 'GN4']], train['is_female'], test_size=.5)"
    ]
   },
   {
@@ -607,7 +474,7 @@
     {
      "data": {
       "text/plain": [
-       "0.78220303103341382"
+       "0.69046064957775011"
       ]
      },
      "execution_count": 14,
@@ -616,6 +483,47 @@
     }
    ],
    "source": [
+    "# Logistic Regression\n",
+    "lreg = LogisticRegression()\n",
+    "lreg.fit(xTrainVal, yTrainVal)\n",
+    "yPredVal = lreg.predict_proba(xTestVal)[:,1]\n",
+    "roc_auc_score(yTestVal, yPredVal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Fit and predict linear models on 1-hot encoded values of the cartesian product of MT2 and GN4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xTrainVal, xTestVal, yTrainVal, yTestVal = train_test_split(x, train['is_female'], test_size=.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.88937974147739318"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Logistic Regression\n",
     "lreg = LogisticRegression()\n",
     "lreg.fit(xTrainVal, yTrainVal)\n",
     "yPredVal = lreg.predict_proba(xTestVal)[:,1]\n",
@@ -624,33 +532,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.72551603406992271"
+       "0.89450825070097684"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "svc = SVC(C=1, gamma=1, probability=True)\n",
-    "svc.fit(xTrainVal, yTrainVal)\n",
-    "yPredVal = svc.predict_proba(xTestVal)[:,1]\n",
+    "# Gradient Boosting\n",
+    "gb = GradientBoostingClassifier()\n",
+    "gb.fit(xTrainVal, yTrainVal)\n",
+    "yPredVal = gb.predict_proba(xTestVal)[:,1]\n",
     "roc_auc_score(yTestVal, yPredVal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.84963801339087708"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SVM\n",
+    "svc = SVC(probability=True)\n",
+    "svc.fit(xTrainVal, yTrainVal)\n",
+    "yPredVal = svc.predict_proba(xTestVal)[:,1]\n",
+    "roc_auc_score(yTestVal, yPredVal)"
+   ]
   }
  ],
  "metadata": {
